refactor: update GoogleDriveController and ResumeGenerationService to use baseResumeId and improve authorization checks